se configuro img responsive con tamano que correspondiagit add .!

--- a/public/assets/css/estilos.css
+++ b/public/assets/css/estilos.css
@@ -72,6 +72,12 @@ body {
 
 }
 
+.responsive {
+  width: 140px;
+  max-width: 140px;
+  height: 140px;
+}
+
 .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
