se termino el componente servicio dentro del componente home, tambien se crearon nuevos componentes jumbotron, nosotros y servicios

--- a/public/assets/css/jumbotron.css
+++ b/public/assets/css/jumbotron.css
@@ -2,7 +2,7 @@
   padding-top: 3rem;
   padding-bottom: 3rem;
   margin-bottom: 0;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 @media (min-width: 768px) {
   .jumbotron {
@@ -29,5 +29,5 @@ footer {
 }
 
 footer p {
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
